refs #1 - fix some sonar issues - java 16 adaptations